Next - edge resistance between heads.

-------------------------------------------------------------------------------

Sat Mar 25 20:58:49 PST 2000
(Mandrake)

oops, debugging printfs

-------------------------------------------------------------------------------

Sun Mar 26 13:42:23 PST 2000
(Mandrake)

fixed edge resistance between heads when you're using xinerama.

-------------------------------------------------------------------------------

Sun Mar 26 14:16:39 PST 2000
(Mandrake)

added xinerama support for maximizing windows.  They'll stay on the current
had unless you use the "absolute" option, which means you want as much space
as possible

-------------------------------------------------------------------------------

Sun Mar 26 15:40:38 PST 2000
(Mandrake)

new "configpanel" ipc command.  This way I can use my config panels from efm
by building a menu that runs eesh *grin*

-------------------------------------------------------------------------------

Tue Mar 28 10:31:25 PST 2000
(Mandrake)

fixed maximize bug where it would pay attention to iconified windows.

-------------------------------------------------------------------------------

Thu Mar 30 15:43:39 PST 2000
(Mandrake)

fixed logout dialog box to work properly under xinerama

-------------------------------------------------------------------------------

Thu Mar 30 18:21:59 PST 2000
(Mandrake)

fix for maximize to ignore iconified windows
fixed dock app support
fix to speed up epplets by merging snap saves in timer event
fixed ascents in I18N fonts
minor initialization fix in eesh


-------------------------------------------------------------------------------

Fri Mar 31 10:38:09 PST 2000
(Mandrake)

some people have problems with this session.c (don't know why)

-------------------------------------------------------------------------------

Mon Apr  3 10:17:21 PDT 2000
(Mandrake)

fix for iconified windows not getting focus properly when in focuslist.