@@ -679,8 +679,8 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					    ic->norm.normal->im->rgb_height);
 			       PastePixmap(disp, tt->win,
 					   Imlib_copy_image(id,
-							    ic->norm.normal->
-							    im),
+							    ic->norm.
+							    normal->im),
 					   Imlib_copy_mask(id,
 							   ic->norm.normal->im),
 					   x, y);
@@ -702,11 +702,12 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.normal->
-							       im),
+							       ic->norm.
+							       normal->im),
 					      Imlib_copy_mask(id,
-							      ic->norm.normal->
-							      im), x, y);
+							      ic->norm.
+							      normal->im), x,
+					      y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -722,11 +723,12 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.normal->
-							       im),
+							       ic->norm.
+							       normal->im),
 					      Imlib_copy_mask(id,
-							      ic->norm.normal->
-							      im), x, y);
+							      ic->norm.
+							      normal->im), x,
+					      y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -742,11 +744,12 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.normal->
-							       im),
+							       ic->norm.
+							       normal->im),
 					      Imlib_copy_mask(id,
-							      ic->norm.normal->
-							      im), x, y);
+							      ic->norm.
+							      normal->im), x,
+					      y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -762,11 +765,12 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.normal->
-							       im),
+							       ic->norm.
+							       normal->im),
 					      Imlib_copy_mask(id,
-							      ic->norm.normal->
-							      im), x, y);
+							      ic->norm.
+							      normal->im), x,
+					      y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -782,11 +786,12 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.normal->
-							       im),
+							       ic->norm.
+							       normal->im),
 					      Imlib_copy_mask(id,
-							      ic->norm.normal->
-							      im), x, y);
+							      ic->norm.
+							      normal->im), x,
+					      y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -806,16 +811,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -829,16 +835,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -852,16 +859,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -875,16 +883,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -898,16 +907,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -921,16 +931,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -944,16 +955,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -967,16 +979,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
